Made small optimalization to adding Context-Dependent Preference Set